Adding Real-Time Workspace progress (channels , messages , members still in progress) previously api-only fetching now it's STOMP/WebSocket subscription updates all users instantly